# FastAPI_lessons

./: .env.example  main.py  pyproject.toml  test.py
migration/versions/: 337f1b0e0b24_add_user_role.py  962210f7773b_add_verify_for_user.py  bcfddae22f3e_init.py  debbeda00f7d_add_table_users.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2696  2840  2841
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16398  16400  16401  16402  16407  16408  16410  2224  2579  2604  2606  2608  2610  2610_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+7 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py
src/schemas/: todo.py  user.py
src/services/: auth.py  email.py  roles.py
